# core

./: Cargo.toml  README.md
src/: lib.rs  playlist.rs  playlist_manager.rs  queue.rs  song.rs
src/playlist_manager/: mod.rs  playlist.rs
src/plugin_manager/: downloader.rs  mod.rs  plugin.rs
