[package]
name = "phosphorus_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.11"
async-trait = "0.1.57"
regex = "1.6.0"
chrono = { version = "0.4.22", features = ["serde"] }
serde_json = "1.0.87"
serde = { version = "1.0.144", features = ["derive"] }
